# powergrid

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  MANIFEST.in  README.org  Rocket.toml  index.html  package.json  run.sh  setup.py
config/: index.js
powergrid/: __init__.py  powergrid.py  schema.sql
powergrid/static/: powergrid.css
powergrid/templates/: layout.html  list.html  run.html
src/: main.rs
src/js/: App.vue  main.js
src/js/components/: PowerGraph.vue  Run.vue  RunInfo.vue  RunTable.vue  SystemInfo.vue
src/js/router/: index.js
test/js/e2e/: nightwatch.conf.js  runner.js
test/js/unit/: index.js
test/js/unit/specs/: Hello.spec.js
